# hola-climbing-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: HARNESS.md
.claude/agents/: architect.md  integration-engineer.md  pipeline-engineer.md  qa-engineer.md  vision-engineer.md
.codex/agents/: architect.toml  integration-engineer.toml  pipeline-engineer.toml  qa-engineer.toml  vision-engineer.toml
.github/workflows/: ai-worker-ci.yml  deploy-ai-worker.yml
app/: __init__.py  main.py
app/api/: __init__.py  health.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/infra/: __init__.py  gcs.py  redis_bus.py
app/models/: __init__.py  callback.py  progress.py  response.py  stream.py
app/services/: __init__.py
app/workers/: __init__.py  stream_consumer.py
deploy/vm/: .env.vm.example  README.md  deploy-ai-worker.sh  docker-compose.yml
models/: flow_qa_rf_v2.joblib
scripts/: __init__.py  apply_dynamic_static_review.py  build_dynamic_static_review_queue.py  build_flow_dataset.py  build_flow_miss_review_queue.py  build_fusion_dataset.py  build_pose_dataset.py  build_pose_tabular_dataset.py  build_video_encoder_dataset.py  cache_gcs_labeled_videos.py  compare_analysis_segments.py  compare_flow_regression.py  dump_technique_segments.py  eval_vision.py  probe_roi_flow_diagnostics.py  propagate_review_decisions.py  render_technique_overlay.py  train_pose_sequence.py  train_tabular_dynamic_static.py
tests/: conftest.py
tests/integration/: test_callback_payload_shape.py  test_stream_consumer.py
tests/unit/: test_apply_dynamic_static_review.py  (+32 more)
(+36 files in other folders)
