[project]
name = "hola-climbing-ai"
version = "0.1.0"
description = "Hola Climbing AI worker — MediaPipe pose + rule-based technique classifier over Redis Streams."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Hola Climbing" }]

dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6",
    "mediapipe>=0.10.18",
    "opencv-python-headless>=4.10",
    "numpy>=1.26,<2.2",
    "redis[hiredis]>=5.2",
    "google-cloud-storage>=2.18",
    "httpx>=0.28",
    "tenacity>=9.0",
    "structlog>=24.4",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "testcontainers[redis]>=4.8",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
ml = [
    "joblib>=1.4",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "torch>=2.3,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]  # line length 핸들링은 formatter에 위임

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
